# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
page_loader/: __init__.py  download.py  path_resolve.py  res.py  save.py
