[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ilnur.nasibullin <nasosurulya@gmail.com>"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
